--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,7 @@ artifactory {
     contextUrl = 'http://artifactory:8081/artifactory'
     publish {
         repository {
-            repoKey = 'libs-snapshot-local' // The Artifactory repository key to publish to
+            repoKey = 'example-repo-local' // The Artifactory repository key to publish to
             username = "${artifactory_user}" // The publisher user name
             password = "${artifactory_password}" // The publisher password
         }
